--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "src/**/*": [
@@ -19,12 +21,16 @@
   },
   "dependencies": {
     "next": "10.1.3",
+    "next-pwa": "^5.2.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
     "@babel/preset-typescript": "^7.13.0",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.22",
@@ -33,6 +39,7 @@
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
